# enricherator

./: .gitignore  CHANGELOG.md  README.md  conda_environment.yaml
R/: .nfs000000046fc14e5a0000000c  cmdstan_do_ppc.R  cmdstan_fit_enrichment_model.R  cmdstan_fit_mcmc_model.R  cmdstan_gather_estimates_from_stanfit.R  cmdstan_get_loo.R  compare_models.R  enricherator_fit.R  fit_par_enrichment_model.R  fit_pathfinder_nopar.R  fit_pathfinder_par.R  fit_vb_nopar.R  get_contrasts.R  helpers.R  plot_fill_with_K.R  plot_region.R  run_all_tests.R  stan_helpers.R  test.R
examples/: nonstranded_sample_info.txt  stranded_sample_info.txt
rust/get_contrasts/: Cargo.toml
rust/get_contrasts/src/: main.rs
rust/get_contrasts/src/test_data/: test.csv
rust/parse_cmdstan_csv_dev/: Cargo.toml
rust/parse_cmdstan_csv_dev/src/: .main.rs.swp  main.rs
rust/parse_cmdstan_csv_dev/test_data/: bytes_per_line.sh  covar_key.json  test_colname_line.csv  test_parse.csv
singularity/: build_on_jar.sh  conda_environment.yaml  enricherator.bashrc  enricherator.def
stan/: ab_smoothed_stranded_enrichment  ab_smoothed_stranded_enrichment.stan  cauchy_prior.stan  diff_prec  diff_prec.stan  diff_prec_by_count.stan  diff_prec_signoise  diff_prec_signoise.stan  hyperlasso_shrinkage  hyperlasso_shrinkage.stan  insanity  joint_likelihood  joint_likelihood.stan  no_shrinkage  no_shrinkage.stan  no_sig_noise_alloc  no_sig_noise_alloc.stan  noise_term  noise_term.stan  norm_mixture_shrinkage  norm_mixture_shrinkage.stan  normal_prior.stan  par_sig_noise_alloc  par_sig_noise_alloc.stan  sig_noise_alloc  (+15 more)
(+88 files in other folders)
