[package]
name = "get_contrasts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["approx"]}
ordered-float = "2.10.0"
tokio = {version="1.34.0", features=["full"]}
rayon = {version="1.8.0"}
approx = "0.5.1"
