[package]
name = "parse_cmdstan_csv_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.10.0"
# bytes = "1.5.0"
# tokio = {version="1.34.0", features=["full"]}
approx = "0.5.1"
ndarray = "0.15.6"
serde_json = "1.0.113"
serde = {version = "1.0.196", features=["derive"]}
