[package]
name = "parse_cmdstan_csv_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
ndarray = {version="0.15.6"}
serde_json = "1.0.113"
serde = {version="1.0.196", features=["derive"]}
clap = {version="4.5.2", features=["derive"]}

